wip: refactor search related classes